# kek-bot

./: .gitignore  Cargo.toml  Dockerfile  build.rs  migrate-and-start.sh
.cargo/: config.toml
dep-installer-hack/: Shuttle.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: .gitignore  env.rs  main.rs  prisma.rs
