[package]
name = "kek-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
regex = "1.9.5"
serenity = {version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
serde = "1.0.183"

[workspace]
members = [
    "prisma-cli"
]
resolver = "2"